--- a/scratchCards-BE/package.json
+++ b/scratchCards-BE/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^8.19.0",
     "nodemon": "^3.1.10",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
