--- a/ui-assets/package.json
+++ b/ui-assets/package.json
@@ -13,14 +13,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@tanstack/react-query": "^5.90.2",
+    "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-router": "^7.9.3",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
