--- a/ui-assets/package.json
+++ b/ui-assets/package.json
@@ -19,9 +19,11 @@
     "@tanstack/react-query": "^5.90.2",
     "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
+    "jotai": "^2.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.4",
     "yup": "^1.7.1"
