TASK-16:: COMPLETED FE UI :: compleded all the user interface and now working on the functionality

--- a/ui-assets/package.json
+++ b/ui-assets/package.json
@@ -16,9 +16,11 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.0",
     "@tanstack/react-query": "^5.90.2",
     "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "jotai": "^2.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
