--- a/scratchCards-BE/package.json
+++ b/scratchCards-BE/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test jest --runInBand"
   },
   "type": "module",
   "keywords": [],
@@ -19,6 +20,12 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^30.2.0",
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.2.3",
+    "prettier": "^3.3.3",
+    "supertest": "^7.1.4"
   }
 }
